# hybrid-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
.husky/: pre-commit
adr/: 000-template.md  001-repo-structure.md  002-database-choice.md  003-python-version.md  004-python-tooling.md  005-schema-migrations.md  006-faq-bot-approach.md  007-sentiment-approach.md  008-tailwind-v3-to-v4.md  README.md
data/: faqs.yaml
data/sentiment/: devset.csv
docs/: roadmap.md
frontend/: .env.example  components.json  cypress.config.ts  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/cypress/: tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: check_indexes.py  db_cleanup.sh  db_reset.sh  dev.ps1  dev.sh  dev_drop_sentiment.py  dev_setup.sh  eval_rule_based.py  reset_alembic_version.py
src/api/: app.py  errors.py
src/common/: json_logging.py
src/config/: settings.py
src/db/: session.py
tests/: conftest.py
tests/db/: test_index_sentiment.py  test_migration_sentiment.py
tests/integration/: test_booking_api.py  test_errors_and_request_id.py  test_faq_api.py  test_faq_endpoint.py  test_faq_threshold.py  test_health.py  test_health_integration.py  test_sentiment_api.py  (+1 more)
(+49 files in other folders)
