[project]
name = "hybrid-ai-platform"
version = "0.0.1"
description = "Foundations for an enterprise-ready multi-vertical AI assistant platform"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]  # adjust to your taste

[tool.ruff.format]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
